tests/parser/fail/v22_fail_while_syntax_removed.ep
# COMPILE_FAIL: Expected end of line
fun main(): void {
    while true {
    }
}
